--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cssselect==1.2.0
 fake-useragent==0.1.11
 feedparser==6.0.10
 Flask==2.2.2
+Flask-Cors==3.0.10
 Flask-SQLAlchemy==3.0.2
 greenlet==1.1.3.post0
 idna==3.4
